wip(frontend): Search UI cleanup + ImportYeti(B2) + BQ Companies
